force-app/main/default/objects/Agents__c/Agents__c.object-meta.xml
<CustomObject>
    <description>Agents who referred business and receive a split of residual income for an approved account.</description>
    <label>Agents</label>
    <nameField>
        <label>Agents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>