force-app/main/default/objects/Agents__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Agent&apos;s Company</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agents</relationshipLabel>
    <relationshipName>Agents</relationshipName>
    <type>Lookup</type>
</CustomField>