force-app/main/default/objects/Agents__c/fields/Agent_Orgin__c.field-meta.xml
<CustomField>
    <fullName>Agent_Orgin__c</fullName>
    <description>How did we find this agent?</description>
    <inlineHelpText>How did we find this agent?</inlineHelpText>
    <label>Where did we find agent?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>