force-app/main/default/objects/Agents__c/fields/Agent_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_Email_Address__c</fullName>
    <description>Email address for Agent.</description>
    <inlineHelpText>Email address for Agent.</inlineHelpText>
    <label>Agent&apos;s Email Address</label>
    <type>Email</type>
</CustomField>