force-app/main/default/objects/Agents__c/fields/Agent_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_Phone_Number__c</fullName>
    <description>Agent&apos;s phone number.</description>
    <inlineHelpText>Agent&apos;s phone number.</inlineHelpText>
    <label>Agent&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>