force-app/main/default/objects/Agents__c/fields/Is_Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Referral_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Referral Partner?</label>
    <type>Checkbox</type>
</CustomField>