force-app/main/default/objects/Agents__c/fields/Split_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>Split_to_Agent__c</fullName>
    <description>Percentage split that agent receives for residual payments</description>
    <inlineHelpText>Percentage split that agent receives for residual payments</inlineHelpText>
    <label>Split to Agent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>