force-app/main/default/objects/Agents__c/fields/Telegram__c.field-meta.xml
<CustomField>
    <fullName>Telegram__c</fullName>
    <label>Telegram</label>
    <length>30</length>
    <type>Text</type>
</CustomField>