force-app/main/default/objects/Agents__c/fields/WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp__c</fullName>
    <label>WhatsApp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>